# coder-core

./: .coveragerc  .gitignore  Dockerfile  LICENSE  README.md  database.env.test  mkdocs.yml  pyproject.toml  setup.py  test-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: check.yml  pipeline.yml  release.yml
codercore/: .gitignore  __init__.py  types.py
codercore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
codercore/db/: __init__.py  aggregation.py  alembic.py  models.py  pagination.py  type.py
codercore/db/models/: user.py
codercore/lib/: __init__.py  aggregation.py  alembic.py  collection.py  decorators.py  descriptors.py  encrypt.py  hash.py  meta.py  oauth.py  redis.py  security.py  settings.py  version.py
codercore/lib/encrypt/: __init__.py  padding.py
codercore/lib/http/: __init__.py  exceptions.py
codercore/lib/schemas/: pydantic.py
codercore/lib/validation/: __init__.py  auth.py
codercore/test/: fixtures.py  pydantic.py
codercore/test/lib/: encrypt.py
docs/reference/: db.md  http.md  lib.md  schemas.md  test.md  types.md
tests/: conftest.py  test_types.py
tests/db/: test_aggregation.py  test_alembic.py  test_db.py  test_pagination.py
tests/db/models/: __init__.py  sample.py  test_models.py
tests/lib/: test_aggregation.py  test_descriptors.py  test_hash.py  test_http.py  test_lib.py  test_meta.py  test_redis.py  test_settings.py  test_version.py
tests/lib/schemas/: test_pydantic.py
tests/test/: test_fixtures.py  test_pydantic.py
