[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[project]
name = "codercore"
version = "1.2.0"
description = "codercore"
readme = "README.md"
authors = [{ name = "Code R", email = "hello@coderstudio.dev" }]
dependencies = [
    'asyncpg ~= 0.27',
    'psycopg2 ~= 2.9',
    'pytest ~= 7.2',
    'redis ~= 4.3',
    'sqlalchemy[asyncio] ~= 1.4',
    'sqlalchemy-utils ~= 0.38'
]

[project.optional-dependencies]
test = [
    'pytest-asyncio ~= 0.20',
    'pytest-cov ~= 4.0',
    'pytest-mock ~= 3.10',
    'pytest-xdist[psutil] ~= 3.0',
]
dev = [
    'black ~= 22.10'
]

[tool.bumpver]
current_version = "1.2.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
