[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[project]
name = "codercore"
version = "6.2.0"
description = "codercore"
readme = "README.md"
authors = [{ name = "Code R", email = "hello@coderstudio.dev" }]
dependencies = [
    'aiohttp ~= 3.8',
    'asyncpg ~= 0.27',
    'asyncstdlib ~= 3.10',
    'bcrypt ~= 4.0',
    'cloud-sql-python-connector[asyncpg] ~= 1.1',
    'psycopg2 ~= 2.9',
    'pydantic ~= 2.4',
    'pytest ~= 7.2',
    'redis ~= 5.0',
    'sqlalchemy[asyncio] ~= 2.0',
    'sqlalchemy-utils ~= 0.41'
]

[project.optional-dependencies]
test = [
    'pytest-asyncio ~= 0.20',
    'pytest-cov ~= 4.0',
    'pytest-mock ~= 3.10',
    'pytest-xdist[psutil] ~= 3.0',
]
dev = [
    'black ~= 22.10',
    'flake8 ~= 6.0',
    'isort ~= 5.11',
]

[tool.bumpver]
current_version = "6.2.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["codercore"]
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
show_missing = true
omit = ["tests/*"]

[tool.isort]
profile = "black"
src_paths = ["codercore", "tests"]
combine_as_imports = true
